welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:5: error: not found: value remplirTableau
 	  remplirTableau(tab);
          ^